--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,19 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+ul {
+    padding: 0px;
+  
+    &.rating li {
+      padding: 5px 10px !important;
+      background: none;
+      color: #ffb400;
+  
+      ion-icon {
+        font-size: 30px;
+      }
+    }
+  }
 
 
 .red_bg{
